fix: fix the spacing issue in about page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,7 +512,7 @@ intro .carousel-container {
    color: #2088DA;
    text-transform: uppercase;
    margin-bottom: 0;
-   margin-top: 60px;
+   margin-top: 90px;
    /* margin-top: 60px; */
  }
 
@@ -1102,7 +1102,7 @@ intro .carousel-container {
 # Services
 --------------------------------------------------------------*/
  .services-section {
-   padding: 107px 0;
+   padding: 11px 0;
    font-family: 'Proxima Nova';
  }
 
